# lernen_mit_mister_max

./: .gitignore  README.md  pyproject.toml
01_scripts/: docker-compose.yml  foo.py  movies_schema.sql  session_1.py  session_10.py  session_11.py  session_11_2.py  session_2.py  session_3.py  session_3_hausaufgaben_1.py  session_3_hausaufgaben_2.py  session_4.py  session_4_hausaufgaben_1.py  session_4_hausaufgaben_2.py  session_5_ha.py  session_5_movies.py  session_5_movies_2.py  session_laphamburg.ipynb
postgresql_docker/: init.sql
