[project]
name = "lernen-mit-mister-max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.5",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-louvain>=0.16",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]