[project]
name = "lernen-mit-mister-max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "networkx>=3.5",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "python-louvain>=0.16",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.4",
]
